#1696: Added GeoCodeAliasType object and queries